Explicitly specify the types to be included in the compilation
This is a workaround for https://github.com/DefinitelyTyped/DefinitelyTyped/issues/33311.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,8 @@
     "noUnusedParameters": true,
     "strict": true,
     "target": "es5",
-    "lib": ["es5", "es6", "es7", "es2017", "dom"],
-
-    "rootDirs": ["src", "stories"]
+    "lib": ["ES2015", "DOM"],
+    "types": ["acceptjs", "react"]
   },
   "exclude": ["node_modules", "dist"],
   "files": ["src/index.d.ts"],
