--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test": "run-s lint build test:*",
     "test:es": "jest --config ./scripts/jest/config.es.js",
     "version": "run-s test changelog authors && git add .",
-    "storybook": "start-storybook -p 9001 -c .storybook --https --ssl-cert server.crt --ssl-key server.key"
+    "storybook": "start-storybook -p 9001 -c .storybook --https --ssl-cert server.crt --ssl-key server.key",
+    "build-storybook": "build-storybook -c .storybook -o .out"
   },
   "repository": {
     "type": "git",
@@ -48,90 +49,90 @@
     "react-dom": "^16.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0",
-    "prop-types": "^15.6.2",
+    "@babel/runtime": "^7.7.7",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.9.0",
     "ramda": "^0.26.1",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.2.2",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.8.0",
     "react-motion": "^0.5.2",
     "react-text-mask": "^5.4.3",
-    "rebass": "^3.0.0",
-    "recompose": "^0.30.0",
-    "styled-components": "^4.1.2",
-    "styled-system": "^3.1.11"
+    "rebass": "^3.2.2",
+    "styled-components": "^4.4.1",
+    "styled-system": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.0.0",
-    "@storybook/addon-actions": "^3.4.11",
-    "@storybook/addon-centered": "^4.1.6",
-    "@storybook/addon-console": "^1.0.4",
-    "@storybook/addon-info": "^3.4.11",
-    "@storybook/addon-knobs": "^3.4.11",
-    "@storybook/addon-viewport": "^4.0.12",
-    "@storybook/react": "^4.0.0-alpha.21",
-    "@types/acceptjs": "j-em/types-accept-js",
-    "@types/enzyme": "^3.1.13",
-    "@types/jest": "^23.3.2",
-    "@types/prop-types": "^15.5.5",
-    "@types/ramda": "^0.25.46",
-    "@types/react": "^16.4.13",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-helmet": "^5.0.7",
-    "@types/react-icons": "^2.2.6",
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.7",
+    "@storybook/addon-actions": "^3.4.12",
+    "@storybook/addon-centered": "^4.1.18",
+    "@storybook/addon-console": "^1.2.1",
+    "@storybook/addon-info": "^3.4.12",
+    "@storybook/addon-knobs": "^3.4.12",
+    "@storybook/addon-viewport": "^4.1.18",
+    "@storybook/react": "^4.1.18",
+    "@types/acceptjs": "github:j-em/types-accept-js",
+    "@types/enzyme": "^3.10.4",
+    "@types/jest": "^23.3.14",
+    "@types/prop-types": "^15.7.3",
+    "@types/query-string": "^6.3.0",
+    "@types/ramda": "^0.25.51",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-helmet": "^5.0.15",
+    "@types/react-icons": "^2.2.7",
     "@types/react-motion": "^0.0.27",
-    "@types/react-text-mask": "^5.4.2",
+    "@types/react-text-mask": "^5.4.6",
     "@types/rebass": "^0.3.4",
     "@types/recompose": "^0.27.0",
-    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-actions": "^3.4.3",
     "@types/storybook__addon-knobs": "^3.4.1",
     "@types/storybook__react": "^3.0.9",
-    "@types/styled-components": "^4.1.3",
-    "@types/styled-system": "^3.0.9",
+    "@types/styled-components": "^4.4.2",
+    "@types/styled-system": "^3.2.2",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-styled-components": "^1.10.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
-    "codecov": "^3.1.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.6",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "codecov": "^3.6.1",
     "concat": "^1.0.3",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "dotenv": "^6.2.0",
-    "dotenv-webpack": "^1.5.7",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
-    "enzyme-to-json": "^3.3.5",
+    "dotenv-webpack": "^1.7.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.3",
     "jest": "^23.5.0",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.14.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
-    "react-test-renderer": "^16.5.0",
+    "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.12.1",
-    "rimraf": "^2.6.2",
+    "rimraf": "^2.7.1",
     "rollup": "^0.65.2",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-filesize": "^4.0.1",
     "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-postcss": "^1.6.3",
-    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-uglify": "^5.0.2",
-    "rollup-plugin-url": "^2.1.0",
-    "shelljs-plugin-authors": "^2.0.3",
+    "rollup-plugin-url": "^2.2.4",
+    "shelljs-plugin-authors": "^2.0.20",
     "ts-jest": "^23.1.4",
-    "tslib": "^1.9.3",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
+    "tslib": "^1.10.0",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^3.6.0",
     "typedoc": "^0.13.0",
     "typeface-roboto": "0.0.54",
-    "typescript": "^3.2.2",
-    "yarn-run-all": "^3.1.1"
+    "typescript": "^3.7.4"
   }
 }
